--- a/Entrega 3/html/estacao_petroleo.html
+++ b/Entrega 3/html/estacao_petroleo.html
@@ -24,6 +24,17 @@
 
 </nav>
 
+<aside id="sticky-social">
+    <ul>
+        <li><a href="https://www.facebook.com/KleberBambamfc/?fref=ts" class="entypo-facebook" target="_blank"><span>Facebook</span></a></li>
+        <li><a href="https://twitter.com/kleberbbb?lang=pt" class="entypo-twitter" target="_blank"><span>Twitter</span></a></li>
+        <li><a href="#" class="entypo-linkedin" target="_blank"><span>LinkedIn</span></a></li>
+        <li><a href="https://www.instagram.com/bambamoficial/" class="entypo-instagrem" target="_blank"><span>Instagram</span></a></li>
+        <li><a href="https://github.com/LucaNoto/CDDA" class="entypo-github" target="_blank"><span>GitHub</span></a></li>
+    </ul>
+</aside>
+
+
 <h1><center>Estação de distribuição de Petróleo - Relatório </center></h1>
 
 <h2><center>Breve descrição</center></h2>
