--- a/Entrega 3/index2.html
+++ b/Entrega 3/index2.html
@@ -19,10 +19,19 @@
         </li>
         <li><a href="html/about.html">Sobre Mim</a></li>
 
-        <li><a href="html/contact_us.html">Contato</a></li>
     </ul>
 
 </nav>
+
+<aside id="sticky-social">
+    <ul>
+        <li><a href="https://www.facebook.com/KleberBambamfc/?fref=ts" class="entypo-facebook" target="_blank"><span>Facebook</span></a></li>
+        <li><a href="https://twitter.com/kleberbbb?lang=pt" class="entypo-twitter" target="_blank"><span>Twitter</span></a></li>
+        <li><a href="#" class="entypo-linkedin" target="_blank"><span>LinkedIn</span></a></li>
+        <li><a href="https://www.instagram.com/bambamoficial/" class="entypo-instagrem" target="_blank"><span>Instagram</span></a></li>
+        <li><a href="https://github.com/LucaNoto/CDDA" class="entypo-github" target="_blank"><span>GitHub</span></a></li>
+    </ul>
+</aside>
 
 <h1><center>O Projeto</center></h1>
 
