--- a/Entrega 3/html/about.html
+++ b/Entrega 3/html/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt" >
 <head>
 	<link rel="stylesheet" type="text/css" href="../stylesheet.css">
 	<meta charset="utf-8">
@@ -34,21 +34,21 @@
 </aside>
 
 
-<h1><center>Sobre Mim</center></h1>
+<h1>Sobre Mim</h1>
 
 <div class="perfil"> 
-    <center><img src="../img/bambam.png"></center>
+    <img src="../img/bambam.png" alt="O monstro">
 </div>
 
 
 <p>Kleber Bambam, também conhecido como Monstro Fora da Jaula é um maluco doente de 37 anos, que faz sucesso não pelo seu talento, que inexiste, mas por seu comportamento retardado no Big Brother, não em qualquer um, no primeiro, como o próprio gosta de destacar, e por ter gritado "BIIIRL" em um vídeo com Felipe Franco.</p>
 
-<p>Protagonizou um filme de Hollywood, denominado "Em Busca do Trapézio Descendente", onde sua luta diária era travada com um peso "pesado pra #!$%", cuja série ele jamais conseguia terminar. A produção lhe rendeu o prêmio "Whey de Ouro" de "melhor buscador de trapézios</a></p>
+<p>Protagonizou um filme de Hollywood, denominado "Em Busca do Trapézio Descendente", onde sua luta diária era travada com um peso "pesado pra #!$%", cuja série ele jamais conseguia terminar. A produção lhe rendeu o prêmio "Whey de Ouro" de "melhor buscador de trapézios</p>
 
-            <center><p><h3> Nome:</h3> <h4> Kleber Bambam </h4></p>
-            <p><h3>Curso:</h3> <h4>Engenharia dos Venenos </h4></p>
-            <p><h3>Turma:</h3> <h4>2˚C </h4></p>
-            <p><h3>Meu github: <a href="https://github.com/LucaNoto/CDDA2016"> www.github.com</a></h3></p></center>
+            <h3> Nome:</h3> <h4> Kleber Bambam </h4>
+            <h3>Curso:</h3> <h4>Engenharia dos Venenos </h4>
+            <h3>Turma:</h3> <h4>2˚C </h4>
+            <h3>Meu github: <a href="https://github.com/LucaNoto/CDDA2016"> www.github.com</a></h3>
 
 
 </body>
