art 1 sem erros
centralizar td!

--- a/Entrega 3/html/artigo_um.html
+++ b/Entrega 3/html/artigo_um.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 	<link rel="stylesheet" type="text/css" href="../stylesheet.css">
 	<meta charset="utf-8">
@@ -33,14 +33,14 @@
 </aside>
 
 
-<h1><center>Artigo 1</center></h1>
+<h1>Artigo 1</h1>
 
-<h2><center>Breve descrição</center></h2>
+<h2>Breve descrição</h2>
 
 <p> Este projeto teve como escopo a aplicação teórica dos conceitos que estávamos aprendendo na disciplina de Grandes Desafios da Engenharia. Englobado pela tutoria, cada aluno escreveu textos de no máximo 7000 caracteres à respeito dos conceitos aprendidos.</p>
 <p> Em contraposição ao senso comum de que o engenheiro não precisa saber escrever ou ainda que o engenheiro só precisa fazer contas, este projeto surgiu como continuação do primeiro para enrradicar definitivamente tais estigmas. O projeto anterior, o Artigo I, foi de certo modo uma entrega parcial deste último, considerando que era fortemente recomendado que corrigíssemos os erros identificados no primeiro com o intuito de entregar um projeto final de qualidade.</p>
 
-<h2><center>Project Data</center></h2>
+<h2>Project Data</h2>
 
 <div class="data">
 
@@ -52,37 +52,35 @@
 
 </div>
 
-<h2><center>Mídias do Projeto</center></h2>
+<h2>Mídias do Projeto</h2>
 
 <div class="img">
   <a target="_blank" href="../img/arduino.jpg">
-    <img src="../img/arduino.jpg" width="300" height="200">
+    <img src="../img/arduino.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 1 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/aperto.jpg">
-    <img src="../img/aperto.jpg" width="300" height="200">
+    <img src="../img/aperto.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 2 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
 
 <div class="img">
-  <a target="_blank" href="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    <iframe width="180" height="120"
-        src="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    </iframe>
+  <a target="_blank" href="../img/petroleo.jpg">
+    <img src="../img/petroleo.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Video Exemplo 1 </div>
+  <div class="desc">Imagem Exemplo 4 </div>
 </div>
 
 
