resto das paginas validadas
precisamos centralizar tudo!!!!

--- a/Entrega 3/html/estacao_meteorologica.html
+++ b/Entrega 3/html/estacao_meteorologica.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 	<link rel="stylesheet" type="text/css" href="../stylesheet.css">
 	<meta charset="utf-8">
@@ -35,13 +35,13 @@
 </aside>
 
 
-<h1><center>Estação Meteorológica</center></h1>
+<h1>Estação Meteorológica</h1>
 
-<h2><center>Breve descrição</center></h2>
+<h2>Breve descrição</h2>
 
 <p> O objetivo era criar um projeto no qual fosse simulado uma estação meteorológica. Esta que possuía sensores de umidade, pressão e temperatura que eram controlados por um Arduino (Microcontrolador). Participei da calibração dos sensores, elaboração do relatório, codagem do programa e design da Placa de Circuito Impresso (PCB).</p>
 
-<h2><center>Project Data</center></h2>
+<h2>Project Data</h2>
 
 <div class="data">
 
@@ -53,38 +53,35 @@
 
 </div>
 
-<h2><center>Mídias do Projeto</center></h2>
+<h2>Mídias do Projeto</h2>
 
 
 <div class="img">
   <a target="_blank" href="../img/arduino.jpg">
-    <img src="../img/arduino.jpg" width="300" height="200">
+    <img src="../img/arduino.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 1 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/aperto.jpg">
-    <img src="../img/aperto.jpg" width="300" height="200">
+    <img src="../img/aperto.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 2 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
-
 <div class="img">
-  <a target="_blank" href="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    <iframe width="180" height="120"
-        src="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    </iframe>
+  <a target="_blank" href="../img/petroleo.jpg">
+    <img src="../img/petroleo.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Video Exemplo 1 </div>
+  <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
 
