--- a/Entrega 3/html/generica.html
+++ b/Entrega 3/html/generica.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 	<link rel="stylesheet" type="text/css" href="../stylesheet.css">
 	<meta charset="utf-8">
@@ -34,14 +34,14 @@
 </aside>
 
 
-<h1><center>Nome do Projeto</center></h1>
+<h1>Nome do Projeto</h1>
 
-<h2><center>Breve descrição</center></h2>
+<h2>Breve descrição</h2>
 
 <p>Mussum Ipsum, cacilds vidis litro abertis. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. Casamentiss faiz malandris se pirulitá. Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi.</p>
 <p>Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis. Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl. Interagi no mé, cursus quis, vehicula ac nisi. Sapien in monti palavris qui num significa  </p>
 
-<h2><center>Project Data</center></h2>
+<h2>Project Data</h2>
 
 <div class="data">
 
@@ -53,38 +53,36 @@
 
 </div>
 
-<h2><center>Mídias do Projeto</center></h2>
+<h2>Mídias do Projeto</h2>
 
 
 <div class="img">
   <a target="_blank" href="../img/arduino.jpg">
-    <img src="../img/arduino.jpg" width="300" height="200">
+    <img src="../img/arduino.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 1 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/aperto.jpg">
-    <img src="../img/aperto.jpg" width="300" height="200">
+    <img src="../img/aperto.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 2 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
 
 <div class="img">
-  <a target="_blank" href="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    <iframe width="180" height="120"
-        src="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    </iframe>
+  <a target="_blank" href="../img/petroleo.jpg">
+    <img src="../img/petroleo.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Video Exemplo 1 </div>
+  <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
 
