--- a/Entrega 3/html/projeto_final.html
+++ b/Entrega 3/html/projeto_final.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 	<link rel="stylesheet" type="text/css" href="../stylesheet.css">
 	<meta charset="utf-8">
@@ -34,13 +34,13 @@
 </aside>
 
 
-<h1><center>Projeto Final de Design de Software</center></h1>
+<h1>Projeto Final de Design de Software</h1>
 
-<h2><center>Breve descrição</center></h2>
+<h2>Breve descrição</h2>
 
 <p>Jogo feito como projeto final da Disciplina de Design de de Software com o objetivo de criar uma plataforma no próprio computador para jogar truco entre 2 jogadores. Ajudei no desenvolvimento do software.</p>
 
-<h2><center>Project Data</center></h2>
+<h2>Project Data</h2>
 
 <div class="data">
 
@@ -52,38 +52,36 @@
 
 </div>
 
-<h2><center>Mídias do Projeto</center></h2>
+<h2>Mídias do Projeto</h2>
 
 
 <div class="img">
   <a target="_blank" href="../img/arduino.jpg">
-    <img src="../img/arduino.jpg" width="300" height="200">
+    <img src="../img/arduino.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 1 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/aperto.jpg">
-    <img src="../img/aperto.jpg" width="300" height="200">
+    <img src="../img/aperto.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 2 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
 
 <div class="img">
-  <a target="_blank" href="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    <iframe width="180" height="120"
-        src="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    </iframe>
+  <a target="_blank" href="../img/petroleo.jpg">
+    <img src="../img/petroleo.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Video Exemplo 1 </div>
+  <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
 
