--- a/Entrega 3/html/reais.html
+++ b/Entrega 3/html/reais.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
   <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   <meta charset="utf-8">
@@ -34,85 +34,92 @@
 </aside>
 
 
-<h1><center>Projetos Reais</center></h1>
+<h1>Projetos Reais</h1>
 
 <div class="lista">
 
 <ul>
 
-  
-
-
   <li><h5>Tridimensionais</h5></li>
-    <ul>
+    <li>
+      <ul>
 
-      <li><h5>Objetos</h5></li>
-        <ul>
-          <li><a href="baratinha.html" > Barata Elétrica </a></li>
-          <li><a href="generica.html"> Brinquedo Infantil </a></li>
-        </ul>
+        <li><h5>Objetos</h5></li>
+        <li>
+          <ul>
+            <li><a href="baratinha.html" > Barata Elétrica </a></li>
+            <li><a href="generica.html"> Brinquedo Infantil </a></li>
+          </ul>
+        </li>
+        <li><h5>Máquinas</h5></li>
+        <li>
+          <ul>
+            <li><a href="chuveiroeletrico.html"> Sistema de Aquecimento do Chuveiro Elétrico</a></li>
+            <li><a href="generica.html"> Circuito Eletrônico com Amp.Op. e Diodos ou Transistores </a></li>
+            <li><a href="generica.html"> Acionamento PWM com eletronica analógica ou filtro </a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
 
-      <li><h5>Máquinas</h5></li>
-
-        <ul>
-          <li><a href="chuveiroeletrico.html"> Sistema de Aquecimento do Chuveiro Elétrico</a></li>
-          <li><a href="generica.html"> Circuito Eletrônico com Amp.Op. e Diodos ou Transistores </a></li>
-          <li><a href="generica.html"> Acionamento PWM com eletronica analógica ou filtro </a></li>
-        </ul>
-    </ul>
 
     <li><h5>Bidimensionais</h5></li>
-    <ul>
-      <li><h5>Artigos</h5></li>
-        <ul>
-          <li><a href="artigo_um.html"> Artigo I</a></li>
-          <li><a href="generica.html"> Artigo II</a></li>
-          <li><a href="generica.html"> Application NASA</a></li>
-        </ul>
-      <li><h5>Relatórios</h5></li>
-        <ul>
-          <li><a href="estacao_petroleo.html"> Estação de Distibuição de Petróleo </a></li>
-          <li><a href="generica.html"> Estudo Autônomo </a></li>
-          <li><a href="generica.html"> Teorema do Limite Central </a></li>
-          <li><a href="generica.html"> Ajuste do Modelo Teórico </a></li>
-        </ul>
-    </ul>
+    <li>
+      <ul>
+        <li><h5>Artigos</h5></li>
+        <li>
+          <ul>
+            <li><a href="artigo_um.html"> Artigo I</a></li>
+            <li><a href="generica.html"> Artigo II</a></li>
+            <li><a href="generica.html"> Application NASA</a></li>
+          </ul>
+        </li>
+        <li><h5>Relatórios</h5></li>
+        <li>
+          <ul>
+            <li><a href="estacao_petroleo.html"> Estação de Distibuição de Petróleo </a></li>
+            <li><a href="generica.html"> Estudo Autônomo </a></li>
+            <li><a href="generica.html"> Teorema do Limite Central </a></li>
+            <li><a href="generica.html"> Ajuste do Modelo Teórico </a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
 </ul>
 
 </div>
 
 
-<h2><center> Projetos em destaque </center></h2>
+<h2> Projetos em destaque </h2>
 
 
 <div class="img">
   <a target="_blank" href="../img/arduino.jpg">
-    <img src="../img/arduino.jpg" width="300" height="200">
+    <img src="../img/arduino.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Projeto 1 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/aperto.jpg">
-    <img src="../img/aperto.jpg" width="300" height="200">
+    <img src="../img/aperto.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Projeto 2 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Projeto 3 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Projeto 4 </div>
 
-</div>
 </div>
 
 
