--- a/Entrega 3/html/virtuais.html
+++ b/Entrega 3/html/virtuais.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
   <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   <meta charset="utf-8">
@@ -33,13 +33,14 @@
 </aside>
 
 
-<h1><center>Projetos Virtuais</center></h1>
+<h1>Projetos Virtuais</h1>
 
 <div class="lista">
 
 <ul>
 
   <li><h5>Python</h5></li>
+  <li>
     <ul>
       <li><a href="projeto_final.html"> Projeto Final </a></li>
       <li><a href="generica.html"> CRUD </a></li>
@@ -51,56 +52,56 @@
       <li><a href="generica.html"> Dinâmica Populacional </a></li>
       <li><a href="generica.html"> Modelos de Regressão </a></li>
     </ul>
-
+  </li>
   <li><h5>C++</h5></li>
-
+  <li>
     <ul>
       <li><a href="estacao_meteorologica.html"> Estação Meteorológica </a></li>
     </ul>
-
+  </li>
   <li><h5>HTML/CSS</h5></li>
-
+  <li>
     <ul>
       <li><a href="generica.html"> Comparação de interface </a></li>
       <li><a href="generica.html"> Protótipo de website </a></li>
       <li><a href="generica.html"> Protótipo de Aplicativo </a></li>
     </ul>
+  </li>
 </ul>
 
 </div>
 
 
-<h2><center> Projetos em Destaque </center></h2>
+<h2> Projetos em Destaque </h2>
 
 
 <div class="img">
   <a target="_blank" href="../img/arduino.jpg">
-    <img src="../img/arduino.jpg" width="300" height="200">
+    <img src="../img/arduino.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Projeto 1 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/aperto.jpg">
-    <img src="../img/aperto.jpg" width="300" height="200">
+    <img src="../img/aperto.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Projeto 2 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Projeto 3 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Projeto 4 </div>
 
-</div>
 </div>
 
 
