--- a/Entrega 3/html/chuveiroeletrico.html
+++ b/Entrega 3/html/chuveiroeletrico.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 	<link rel="stylesheet" type="text/css" href="../stylesheet.css">
 	<meta charset="utf-8">
@@ -34,13 +34,13 @@
 </aside>
 
 
-<h1><center>Relatório Chuveiro Elétrico</center></h1>
+<h1>Relatório Chuveiro Elétrico</h1>
 
-<h2><center>Breve descrição</center></h2>
+<h2>Breve descrição</h2>
 
 <p>A atividade consistiu na construção de um modelo de chuveiro com 3 temperaturas diferentes utilizando um circuito com 3 resistores iguais. Para tanto, pensamos em fazer uma “chave” no circuito, a qual poderia estar ligada em 3 pontos diferentes: A,B e C. Em A, a resistência equivalente do circuito seria a de apenas um resistor; em B, a resistência equivalente do circuito seria a de 2 resistores em série; em C, a resistência equivalente do circuito seria a de 3 resistores em série. Testamos o circuito na protoboard e calculamos os valores teóricos. Por fim, medimos os valores com o multímetro e comparamos ambos numa tabela.</p>
 
-<h2><center>Project Data</center></h2>
+<h2>Project Data</h2>
 
 <div class="data">
 
@@ -52,38 +52,36 @@
 
 </div>
 
-<h2><center>Mídias do Projeto</center></h2>
+<h2>Mídias do Projeto</h2>
 
 
 <div class="img">
   <a target="_blank" href="../img/chuveiroeletrico.jpg">
-    <img src="../img/chuveiroeletrico.jpg" width="300" height="200">
+    <img src="../img/chuveiroeletrico.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 1 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/aperto.jpg">
-    <img src="../img/aperto.jpg" width="300" height="200">
+    <img src="../img/aperto.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 2 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
 
 <div class="img">
-  <a target="_blank" href="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    <iframe width="180" height="120"
-        src="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    </iframe>
+  <a target="_blank" href="../img/petroleo.jpg">
+    <img src="../img/petroleo.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Video Exemplo 1 </div>
+  <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
 
