--- a/Entrega 3/html/estacao_petroleo.html
+++ b/Entrega 3/html/estacao_petroleo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 	<link rel="stylesheet" type="text/css" href="../stylesheet.css">
 	<meta charset="utf-8">
@@ -34,14 +34,14 @@
 </aside>
 
 
-<h1><center>Estação de distribuição de Petróleo - Relatório </center></h1>
+<h1>Estação de distribuição de Petróleo - Relatório </h1>
 
-<h2><center>Breve descrição</center></h2>
+<h2>Breve descrição</h2>
 
 <p>A atividade consistiu no planejamento de um projeto de distribuição de petróleo que fosse capaz de atender às especificações de pressão de 3 refinarias diferentes: A,B e C. A partir da estação de bombeamento, o petróleo deveria chegar às refinarias com uma vazão que estivesse dentro de determinada faixa de valores. De forma a realizar o projeto, estavam à disposição válvulas, tubos e uma bomba auxiliar. Conseguintemente, é possível diminuir o fluxo através da utilização de válvulas, criar outros caminhos para a passagem de água pelos tubos e aumentar a pressão da água com a bomba auxiliar.</p>
 <p>Com o intuito de facilitar o planejamento, foi estabelecido uma analogia entre o sistema real e a montagem de um circuito elétrico. A partir dessa comparação, foi preciso converter os valores reais para equivalentes no circuito elétrico. Nesse sentido, consideramos os resistores como sendo as válvulas, uma bateria principal como a estação de bombeamento e a uma bateria auxiliar como a bomba auxiliar. Ademais, a diferença de pressão é a diferença de potencial e a vazão é a corrente.</p>
 
-<h2><center>Project Data</center></h2>
+<h2>Project Data</h2>
 
 <div class="data">
 
@@ -53,39 +53,38 @@
 
 </div>
 
-<h2><center>Mídias do Projeto</center></h2>
+<h2>Mídias do Projeto</h2>
 
 
 <div class="img">
   <a target="_blank" href="../img/petroleo.jpg">
-    <img src="../img/petroleo.jpg" width="300" height="200">
+    <img src="../img/petroleo.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 1 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/aperto.jpg">
-    <img src="../img/aperto.jpg" width="300" height="200">
+    <img src="../img/aperto.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 2 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
-    <img src="../img/pcb.jpg" width="300" height="200">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
   <div class="desc">Imagem Exemplo 3 </div>
 </div>
 
 
 <div class="img">
-  <a target="_blank" href="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    <iframe width="180" height="120"
-        src="https://www.youtube.com/watch?v=qacQMtdzSqk">
-    </iframe>
+  <a target="_blank" href="../img/petroleo.jpg">
+    <img src="../img/petroleo.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Video Exemplo 1 </div>
+  <div class="desc">Imagem Exemplo 3 </div>
 </div>
+
 
 
 
