--- a/Entrega 3/html/about.html
+++ b/Entrega 3/html/about.html
@@ -13,8 +13,10 @@
 
         <li><a class="dropdown" href="#">Taxonomia dos Projetos</a>
             <ul>
-                <li><a href="virtuais.html"> Projetos Virtuais </a></li>
-                <li><a href="reais.html"> Projetos Reais </a></li>
+                <li><a href="html/eletronica.html"> Eletrônica </a></li>
+                <li><a href="html/mecanica.html"> Mecânica </a></li>
+                <li><a href="html/computacao.html"> Computação </a></li>
+                <li><a href="html/design.html"> Design </a></li>
             </ul>
         </li>
         <li><a href="about.html">Sobre Mim</a></li>
@@ -45,11 +47,13 @@
 
 <p>Protagonizou um filme de Hollywood, denominado "Em Busca do Trapézio Descendente", onde sua luta diária era travada com um peso "pesado pra #!$%", cuja série ele jamais conseguia terminar. A produção lhe rendeu o prêmio "Whey de Ouro" de "melhor buscador de trapézios</p>
 
+<div class="infos"> 
             <h3> Nome:</h3> <h4> Kleber Bambam </h4>
             <h3>Curso:</h3> <h4>Engenharia dos Venenos </h4>
             <h3>Turma:</h3> <h4>2˚C </h4>
             <h3>Meu github: <a href="https://github.com/LucaNoto/CDDA2016"> www.github.com</a></h3>
 
+</div>
 
 </body>
 </html>
