--- a/Entrega 3/html/eletronica.html
+++ b/Entrega 3/html/eletronica.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-	<link rel="stylesheet" type="text/css" href="../stylesheet.css">
-	<meta charset="utf-8">
-	<title>Página Exemplo</title>
+  <link rel="stylesheet" type="text/css" href="../stylesheet.css">
+  <meta charset="utf-8">
+  <title>Projetos Virtuais</title>
 </head>
 <body>
-	<nav>
+  <nav>
     <ul class="cf">
 
         <li><a href="../index2.html">Home</a></li>
 
         <li><a class="dropdown" href="#">Taxonomia dos Projetos</a>
             <ul>
-                <li><a href="html/eletronica.html"> Eletrônica </a></li>
-                <li><a href="html/mecanica.html"> Mecânica </a></li>
-                <li><a href="html/computacao.html"> Computação </a></li>
-                <li><a href="html/design.html"> Design </a></li>
+                <li><a href="eletronica.html"> Eletrônica </a></li>
+                <li><a href="mecanica.html"> Mecânica </a></li>
+                <li><a href="computacao.html"> Computação </a></li>
+                <li><a href="design.html"> Design </a></li>
             </ul>
         </li>
         <li><a href="about.html">Sobre Mim</a></li>
-
     </ul>
 
 </nav>
@@ -36,54 +35,52 @@
 </aside>
 
 
-<h1>Projeto Final de Design de Software</h1>
+<h1>Projetos de Eletrônica</h1>
 
-<h2>Breve descrição</h2>
+<div class="lista">
 
-<p>Jogo feito como projeto final da Disciplina de Design de de Software com o objetivo de criar uma plataforma no próprio computador para jogar truco entre 2 jogadores. Ajudei no desenvolvimento do software.</p>
 
-<h2>Project Data</h2>
-
-<div class="data">
-
-    <h3> Nome:</h3> Projeto Final de Design de Software, Jogo de Truco Online
-    <h3>Curso:</h3>   Ciclo Básico - Design de Software    
-    <h3>Período</h3>  1˚ Período 
-    <h3>Habilidades Envolvidas:</h3> Design e Escrita
-    <h3>Outros:</h3> -
+      <ul>
+        <li><a href="chuveiroeletrico.html"> Sistema de Aquecimento do Chuveiro Elétrico</a></li>
+        <li><a href="estacao_meteorologica.html"> Estação Meteorológica </a></li>
+        <li><a href="estacao_petroleo.html"> Estação de Distribuição de Petróleo </a></li>
+        <li><a href="generica.html"> Circuito Eletrônico com Amp.Op. e Diodos ou Transistores </a></li>
+        <li><a href="generica.html"> Acionamento PWM com eletronica analógica ou filtro </a></li>
+      </ul>
 
 </div>
 
-<h2>Mídias do Projeto</h2>
+
+<h2> Projetos em Destaque </h2>
 
 
 <div class="img">
   <a target="_blank" href="../img/arduino.jpg">
     <img src="../img/arduino.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Imagem Exemplo 1 </div>
+  <div class="desc">Projeto 1 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/aperto.jpg">
     <img src="../img/aperto.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Imagem Exemplo 2 </div>
+  <div class="desc">Projeto 2 </div>
 </div>
 
 <div class="img">
   <a target="_blank" href="../img/pcb.jpg">
     <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Imagem Exemplo 3 </div>
+  <div class="desc">Projeto 3 </div>
 </div>
 
-
 <div class="img">
-  <a target="_blank" href="../img/petroleo.jpg">
-    <img src="../img/petroleo.jpg" width="300" height="200" alt="">
+  <a target="_blank" href="../img/pcb.jpg">
+    <img src="../img/pcb.jpg" width="300" height="200" alt="">
   </a>
-  <div class="desc">Imagem Exemplo 3 </div>
+  <div class="desc">Projeto 4 </div>
+
 </div>
 
 
