--- a/Entrega 3/index2.html
+++ b/Entrega 3/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<meta charset="utf-8">
@@ -11,10 +11,12 @@
 
         <li><a href="index2.html">Home</a></li>
 
-        <li><a class="dropdown" href="#">Taxonomia dos Projetos</a>
+        <li><a class="dropdown" href="#">Projetos</a>
             <ul>
-                <li><a href="html/virtuais.html"> Projetos Virtuais </a></li>
-                <li><a href="html/reais.html"> Projetos Reais </a></li>
+                <li><a href="html/eletronica.html"> Eletrônica </a></li>
+                <li><a href="html/mecanica.html"> Mecânica </a></li>
+                <li><a href="html/computacao.html"> Computação </a></li>
+                <li><a href="html/design.html"> Design </a></li>
             </ul>
         </li>
         <li><a href="html/about.html">Sobre Mim</a></li>
@@ -33,7 +35,7 @@
     </ul>
 </aside>
 
-<h1><center>O Projeto</center></h1>
+<h1>O Projeto</h1>
 
 <p>Com o intuito de construir um portfólio com os projetos que foram ou ainda serão realizados no decorrer dos dois primeiros semestres de engenharia do Insper, nosso grupo (Luca Noto, Victor Moura, Gustavo Gobetti e Felipe Sigiani) organizou taxonomicamente os projetos, facilitando a navegação pelo site. Esta organização foi feita pensando em evidenciar os principais aprendizados de cada projeto e as habilidades requeridas pelos mesmo</p>
 
