--- a/Entrega 3/html/design.html
+++ b/Entrega 3/html/design.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   <meta charset="utf-8">
-  <title>Projetos Reais</title>
+  <title>Projetos Virtuais</title>
 </head>
 <body>
   <nav>
@@ -13,12 +13,13 @@
 
         <li><a class="dropdown" href="#">Taxonomia dos Projetos</a>
             <ul>
-                <li><a href="virtuais.html"> Projetos Virtuais </a></li>
-                <li><a href="reais.html"> Projetos Reais </a></li>
+                <li><a href="eletronica.html"> Eletrônica </a></li>
+                <li><a href="mecanica.html"> Mecânica </a></li>
+                <li><a href="computacao.html"> Computação </a></li>
+                <li><a href="design.html"> Design </a></li>
             </ul>
         </li>
         <li><a href="about.html">Sobre Mim</a></li>
-
     </ul>
 
 </nav>
@@ -34,63 +35,33 @@
 </aside>
 
 
-<h1>Projetos Reais</h1>
+<h1>Projetos de Design </h1>
 
 <div class="lista">
 
 <ul>
 
-  <li><h5>Tridimensionais</h5></li>
-    <li>
-      <ul>
-
-        <li><h5>Objetos</h5></li>
-        <li>
-          <ul>
-            <li><a href="baratinha.html" > Barata Elétrica </a></li>
-            <li><a href="generica.html"> Brinquedo Infantil </a></li>
-          </ul>
-        </li>
-        <li><h5>Máquinas</h5></li>
-        <li>
-          <ul>
-            <li><a href="chuveiroeletrico.html"> Sistema de Aquecimento do Chuveiro Elétrico</a></li>
-            <li><a href="generica.html"> Circuito Eletrônico com Amp.Op. e Diodos ou Transistores </a></li>
-            <li><a href="generica.html"> Acionamento PWM com eletronica analógica ou filtro </a></li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-
-
-    <li><h5>Bidimensionais</h5></li>
-    <li>
-      <ul>
-        <li><h5>Artigos</h5></li>
-        <li>
-          <ul>
-            <li><a href="artigo_um.html"> Artigo I</a></li>
-            <li><a href="generica.html"> Artigo II</a></li>
-            <li><a href="generica.html"> Application NASA</a></li>
-          </ul>
-        </li>
-        <li><h5>Relatórios</h5></li>
-        <li>
-          <ul>
-            <li><a href="estacao_petroleo.html"> Estação de Distibuição de Petróleo </a></li>
-            <li><a href="generica.html"> Estudo Autônomo </a></li>
-            <li><a href="generica.html"> Teorema do Limite Central </a></li>
-            <li><a href="generica.html"> Ajuste do Modelo Teórico </a></li>
-          </ul>
-        </li>
-      </ul>
-    </li>
+  <li><h5>Design Thinking </h5></li>
+  <li>
+    <ul>
+      <li><a href="baratinha.html" > Barata Elétrica </a></li>
+      <li><a href="generica.html"> Brinquedo Infantil </a></li>
+    </ul>
+  </li>
+  <li><h5>Pensamento Crítico</h5></li>
+  <li>
+    <ul>
+      <li><a href="artigo_um.html"> Artigo I</a></li>
+      <li><a href="generica.html"> Artigo II</a></li>
+      <li><a href="generica.html"> Application NASA</a></li>
+    </ul>
+  </li>
 </ul>
 
 </div>
 
 
-<h2> Projetos em destaque </h2>
+<h2> Projetos em Destaque </h2>
 
 
 <div class="img">
