--- a/Entrega 3/html/estacao_meteorologica.html
+++ b/Entrega 3/html/estacao_meteorologica.html
@@ -15,8 +15,10 @@
 
         <li><a class="dropdown" href="#">Taxonomia dos Projetos</a>
             <ul>
-                <li><a href="virtuais.html"> Projetos Virtuais </a></li>
-                <li><a href="reais.html"> Projetos Reais </a></li>
+                <li><a href="html/eletronica.html"> Eletrônica </a></li>
+                <li><a href="html/mecanica.html"> Mecânica </a></li>
+                <li><a href="html/computacao.html"> Computação </a></li>
+                <li><a href="html/design.html"> Design </a></li>
             </ul>
         </li>
         <li><a href="about.html">Sobre Mim</a></li>
