--- a/Entrega 3/html/mecanica.html
+++ b/Entrega 3/html/mecanica.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   <meta charset="utf-8">
-  <title>Projetos Virtuais</title>
+  <title>Projetos Reais</title>
 </head>
 <body>
   <nav>
@@ -13,11 +13,14 @@
 
         <li><a class="dropdown" href="#">Taxonomia dos Projetos</a>
             <ul>
-                <li><a href="virtuais.html"> Projetos Virtuais </a></li>
-                <li><a href="reais.html"> Projetos Reais </a></li>
+                <li><a href="eletronica.html"> Eletrônica </a></li>
+                <li><a href="mecanica.html"> Mecânica </a></li>
+                <li><a href="computacao.html"> Computação </a></li>
+                <li><a href="design.html"> Design </a></li>
             </ul>
         </li>
         <li><a href="about.html">Sobre Mim</a></li>
+
     </ul>
 
 </nav>
@@ -33,46 +36,39 @@
 </aside>
 
 
-<h1>Projetos Virtuais</h1>
+<h1>Projetos de Mecânica</h1>
 
 <div class="lista">
 
 <ul>
 
-  <li><h5>Python</h5></li>
-  <li>
-    <ul>
-      <li><a href="projeto_final.html"> Projeto Final </a></li>
-      <li><a href="generica.html"> CRUD </a></li>
-      <li><a href="generica.html"> Jogo da Velha </a></li>
-      <li><a href="generica.html"> Cálculo de conceito </a></li>
-      <li><a href="generica.html"> Análise Exploratória </a></li>
-      <li><a href="generica.html"> Sistema mecânico </a></li>
-      <li><a href="generica.html"> Termodinâmica/Farmacocinética </a></li>
-      <li><a href="generica.html"> Dinâmica Populacional </a></li>
-      <li><a href="generica.html"> Modelos de Regressão </a></li>
-    </ul>
-  </li>
-  <li><h5>C++</h5></li>
-  <li>
-    <ul>
-      <li><a href="estacao_meteorologica.html"> Estação Meteorológica </a></li>
-    </ul>
-  </li>
-  <li><h5>HTML/CSS</h5></li>
-  <li>
-    <ul>
-      <li><a href="generica.html"> Comparação de interface </a></li>
-      <li><a href="generica.html"> Protótipo de website </a></li>
-      <li><a href="generica.html"> Protótipo de Aplicativo </a></li>
-    </ul>
-  </li>
+    <li><h5>Modelagem Física</h5></li>
+    <li>
+        <ul>
+            <li><a href="generica.html"> Sistema mecânico </a></li>
+            <li><a href="generica.html"> Termodinâmica/Farmacocinética </a></li>
+            <li><a href="generica.html"> Dinâmica Populacional </a></li>
+            <li><a href="generica.html"> Projeto Único </a></li>
+        </ul>
+    </li>
+
+
+    <li><h5>Matemática Teórica</h5></li>
+    <li>
+        <ul>
+            <li><a href="generica.html"> Estudo Autônomo </a></li>
+            <li><a href="generica.html"> Teorema do Limite Central </a></li>
+            <li><a href="generica.html"> Ajuste do Modelo Teórico </a></li>
+            <li><a href="generica.html"> Análise Exploratória </a></li>
+            <li><a href="generica.html"> Modelos de Regressão </a></li>
+        </ul>
+    </li>
 </ul>
 
 </div>
 
 
-<h2> Projetos em Destaque </h2>
+<h2> Projetos em destaque </h2>
 
 
 <div class="img">
