--- a/Entrega 3/index2.html
+++ b/Entrega 3/index2.html
@@ -41,7 +41,7 @@
 
 <p>Na aba "Sobre mim", encontra-se uma descrição breve e fictícia do Bambam. Na aba "Taxonomia dos Projetos" encontram-se, já na divisão taxonômica, cada um dos projetos deste ano letivo. Por fim, na aba "Contato" encontram-se as mídias(Facebook, Twitter etc) da celebridade.</p>
 
-<p>Comece a navegar utilizando o menu superior ou acesse por aqui o portofólio de projetos <a href="html/virtuais.html"> Virtuais </a> e <a href="html/reais.html"> Reais </a></p>
+<p>Comece a navegar utilizando o menu superior ou acesse por aqui o portofólio de projetos de <a href="html/eletronica.html">Eletrônica </a>, <a href="html/mecanica.html">Mecânica </a>, <a href="html/computacao.html">Computação </a> e <a href="html/design.html">Design </a></p>
 
 
 
